# simple-anti-spam-bot

./: .gitignore  Cargo.toml  README.org
src/: main.rs
