[package]
name = "test_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.7.0"
log = "0.4.8"
tokio-stream = "0.1.8"
futures-util = "0.3.21"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.43"
