cargo-features = ["edition2021"]
[package]
name = "test_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.7.0", features = ["macros"]}
log = "0.4.8"
tokio-stream = "0.1.8"
futures-util = "0.3.21"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
once_cell = "1.9.0"
tracing = "0.1"
tracing-subscriber = "0.3"
